tests/NormalTests/paczka1/fuzzy1/73133157.err
Error in line 8: 1ZUaii1 A464 97,6
Error in line 24: k1HXZMAszT S821 135,11
Error in line 25: A606 A606 16,6
Error in line 13: SbNSaa S881 56,6
Error in line 27: SbNSaa A606 40,9
